@@ -11,6 +11,10 @@ summary: Explaining how to configure the top navigation bar.
 
 # Navigation
 
+The navigation bar is on the top of the website. In desktop mode, it looks like a long bar with several menu options on top. In mobile mode, it looks like a banner with a few buttons on the right side, which can display the menu, sidebar and home buttons easily.
+
+
+
 ## Structure
 
 ### Home
