@@ -1,5 +1,5 @@
 {% assign sidebar = site.data[page.sidebar] %}
-<div class="collapse mydocsidebar">
+<div class="collapse mydocsidebar collapsable" aria-expanded="false">
 
 
 <div class="sidebar-inner">
