@@ -33,6 +33,7 @@
     .container-fluid > .navbar-collapse, .container-fluid > .navbar-header, .container > .navbar-collapse, .container > .navbar-header {
 
 	    margin-left: 0px;
+	    margin-top: 10px;
     }
 
     /* Sidebar stuff */
@@ -272,5 +273,11 @@
 	
     .row.bottom-links {
 	    backdrop-filter: none;
+    }
+    
+    // hides certain elements that look like crap on mobile for the tutorial section
+    
+    .tutorial-hide-element {
+        display: none;
     }
 }
