@@ -188,3 +188,9 @@ i.fa.fa-envelope-o.topnavfeedback {
 {
 	background-color: transparent;
 }
+
+.navbar-toggle {
+	border-radius: 30px;
+	width: 60px;
+	height: 60px;
+}
