@@ -1,5 +1,6 @@
 11-30-2024:
 - Added ability to have banner image and footer image.
+- Added top button to mobile layout.
 
 11-28-2024:
 - Fixed color CSS.
